# woofer

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
docker/: Dockerfile  build.sh
src/app/: MainApplication.cpp  MainApplication.hpp  resources.qrc
src/app/qml/: main.qml  welcome.qml
src/app/ui/: Controller.cpp  Controller.hpp  ViewModel.cpp  ViewModel.hpp
src/infra/elements/: Track.cpp  Track.hpp
src/infra/tables/: BaseTableModel.hpp  Track.cpp  Track.hpp
